login page scrollbar fix

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -1,7 +1,7 @@
 
 // LOGIN
 
-@login-content-height: @vertical-grid*5.5;
+@login-content-height: @vertical-grid*5.6;
 
 section#login {
   .column {
